--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "Info"
   ],
   "author": "Sharif",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.2.5"
+  }
 }
