--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.5"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sharifmrahat/location-weather-info.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sharifmrahat/location-weather-info/issues"
+  },
+  "homepage": "https://github.com/sharifmrahat/location-weather-info#readme"
 }
