--- a/package.json
+++ b/package.json
@@ -1,25 +1,4 @@
 {
   "name": "location-weather-info",
-  "version": "1.2.0",
-  "description": "Retrieve weather information based on user's location.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "Location",
-    "Weather",
-    "Info"
-  ],
-  "author": "Sharif",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.2.5"
-  },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sharifmrahat/location-weather-info.git"
-  },
-  "homepage": "https://github.com/sharifmrahat/location-weather-info#readme"
+  "packageManager": "yarn@3.3.1"
 }
