--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "location-weather-info",
   "packageManager": "yarn@3.3.1",
   "description": "Retrieve current weather information based on user's location.",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/sharifmrahat/location-weather-info/issues"
   },
-  "homepage": "https://github.com/sharifmrahat/location-weather-info#readme",
+  "homepage": "https://location-weather-info.vercel.app/",
   "dependencies": {
     "axios": "^1.2.5"
   },
