--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://location-weather-info.vercel.app/",
   "dependencies": {
-    "axios": "^1.2.5"
-  },
-  "devDependencies": {}
+    "axios": "^1.2.5",
+    "dotenv": "^16.0.3",
+    "file-system": "^2.2.2"
+  }
 }
