--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "location-weather-info",
   "packageManager": "yarn@3.3.1",
   "description": "Retrieve current weather information based on user's location.",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,7 +23,6 @@
   },
   "homepage": "https://location-weather-info.vercel.app/",
   "dependencies": {
-    "axios": "^1.2.5",
-    "dotenv": "^16.0.3"
+    "axios": "^1.2.5"
   }
 }
